# pkg_b

./: Makefile  README.md  pyproject.toml  requirements.txt
src/pkg_b/: vars.py
tests/: test_vars.py
