[project]
name = 'pkg_b'
description = 'Package B is part of a broder project of Python package management.'
readme = 'README.md'
version = '1.0.0'
requires-python = '>=3.11'
dependencies = ['pkg_c']

[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'

# Exclude tests from the distribution
[tool.setuptools.packages.find]
where = ['src']
include = ['*']
exclude = ['tests']

# Include this configruation so that we can import the module we want to test.
[tool.pytest.ini_options]
pythonpath = ['src', ]
